# miniVE

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/: release-checklist.md
docs/superpowers/plans/: 2026-07-06-minive-v1.md  2026-07-10-logs-panel.md  2026-07-10-runtime-catalog.md
docs/superpowers/specs/: 2026-07-06-minive-design.md  2026-07-10-runtime-catalog-and-logs-design.md
marketing/: demo-shot-list.md  launch-posts.md  product-hunt.md  seo-content-plan.md
packaging/: README.md  install.cmd  install.ps1  install.sh
packaging/homebrew/: minive.rb
packaging/winget/: SahilSidhu7.miniVE.installer.yaml  SahilSidhu7.miniVE.locale.en-US.yaml  SahilSidhu7.miniVE.yaml
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: container_logs.rs  env_manager.rs  files.rs  images.rs  lang_support.rs  lib.rs  logging.rs  main.rs  registry.rs  runtime_catalog.rs  scripts.rs  settings.rs  state.rs  term.rs
src-tauri/tests/: docker_integration.rs
src/lib/: DockerGate.svelte  FileTree.svelte  Home.svelte  LogsPanel.svelte  ManageImages.svelte  Popout.svelte  Preview.svelte  ScriptsPanel.svelte  Terminal.svelte  Wizard.svelte  Workspace.svelte  catalog.ts  popin.ts  types.ts
src/routes/: +page.svelte
