[package]
name = "minive"
version = "0.4.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
# GUI keeps a distinct target name so the CLI can own the plain `minive` name.
default-run = "minive-app"

[[bin]]
name = "minive-app"
path = "src/main.rs"

[[bin]]
name = "minive"
path = "src/bin/minive.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "minive_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bollard = "0.18"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tar = "0.4"
tauri-plugin-dialog = "2"
regex = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-no-provider"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing-appender = "0.2"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-updater = "2"

